Convert buildings.txt to .json